# maracuja

./: .gitignore  .gitignore~  CMakeLists.txt
app/: CMakeLists.txt  CMakeLists.txt~
app/include/: MaracujaMS.hpp  MaracujaMS.hpp~  SSM.hpp  SSM.hpp~  SpecOpsTest.hpp  SpecOpsTest.hpp~
app/res/: COPYING  MaracujaMS.qrc  README
app/src/: MaracujaMS.cpp  MaracujaMS.cpp~  SSM.cpp  SSM.cpp~  SpecOpsTest.cpp  SpecOpsTest.cpp~  main.cpp
app/ui/: MaracujaMS.ui
lib/: CMakeLists.txt  FindMaracuja.cmake  MaracujaConfig.cmake
lib/include/maracuja/: Channel.hpp  MSImage.hpp  SpecOps.hpp  SpecOps.hpp~  Spectrum.hpp  util.hpp
lib/src/: Channel.cpp  MSImage.cpp  MSImage.cpp~  SpecOps.cpp  SpecOps.cpp~  Spectrum.cpp  Spectrum.cpp~
lib/test/: batch.sh  test.cpp
ubuild/: CMakeCache.txt  Makefile  Maracuja_Depends.cmake  cmake_install.cmake  install_manifest.txt
ubuild/app/: Makefile  cmake_install.cmake  qrc_MaracujaMS.cxx  ui_MaracujaMS.h
ubuild/app/Headers/: MaracujaMS.hpp
ubuild/app/include/: moc_MaracujaMS.cxx
ubuild/lib/: Makefile  cmake_install.cmake  test
ubuild/lib/Headers/: Channel.hpp
